# shor

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.dev  setup.cfg  setup.py
shor/: backends.py  errors.py  gates.py  layers.py  operations.py  quantum.py  simulation.py  utils.py
shor/algorithms/: shor.py
shor/providers/: IBMQ.py  ShorSimulator.py  __init__.py  base.py
shor/utils/: collections.py  qbits.py  visual.py
tests/: util.py
tests/integration/: algorithms.py  test_algorithms.py  test_basic_examples.py  test_gates.py  test_gates_integration.py
tests/providers/: IBMQ.py  ShorSimulator.py
tests/unit/: test_backends.py  test_circuits.py  test_gates.py  test_layers.py  test_operations.py  test_quantum.py
