[tool.poetry]
name = "shor"
version = "0.0.3"
description = "Quantum Computing for Humans"
authors = ["Collin Overbay - shor.dev <shordotdev@gmail.com>", "Van Magnan <vanmagnan@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
qiskit = "^0.23.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pre-commit = "^2.9.2"

[tool.black]
line_length=120

[tool.coverage.run]
source = ["shor"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.pytest.ini]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
